--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 configs/configs.yaml
 logs/*
 v2boardtgbot*
+main
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
